# LightRAG

./: .gitignore  Dockerfile  Dockerfile.postgres  check_db.py  docker-compose.yml  env.example
3.14/deploy/lambda/: Dockerfile  command.txt
3.14/lightrag_retriever/: pyproject.toml  test_retriever_local.py
3.14/lightrag_retriever/lightrag_retriever/: __init__.py  constants.py  factory.py  types.py  utils.py
3.14/lightrag_retriever/lightrag_retriever/pg/: __init__.py  graph_storage.py  kv_storage.py  sql_templates.py  vector_storage.py
3.14/lightrag_retriever/tests/: test_retriever.py
deploy/lambda/: Dockerfile  command.txt  handler.py
lightrag/kg/: __init__.py  s3_vectors_impl.py
lightrag_retriever/: README.md  pyproject.toml
lightrag_retriever/lightrag_retriever/: __init__.py  base.py  llm.py  operate.py  prompts.py  retriever.py  s3_vectors.py
lightrag_retriever/lightrag_retriever/pg/: db.py  namespace.py
